fix(stepper): horizontal scrollbar is no longer available.

--- a/src/app/stepper-arch/stepper-arch.component.scss
+++ b/src/app/stepper-arch/stepper-arch.component.scss
@@ -36,6 +36,7 @@
 .cross-icon {
   font-size: 20px;
   cursor: pointer;
+  width:3%;
 }
 
 .stepper-box {
@@ -48,6 +49,10 @@
 // helper classes
 .w-35 {
   width: 35%;
+}
+
+.w-88 {
+  width: 88%;
 }
 
 // End of helper classes
